홈화면 레이아웃 완성

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,16 +18,29 @@ android:layout_height="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
-
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Home"
-            android:textColor="@color/black"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:layout_margin="10dp"/>
+            android:layout_height="100dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="10dp"
+                android:text="Home"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+            <ImageView
+                android:layout_margin="10dp"
+                android:layout_alignParentTop="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/home_plus"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
         <androidx.appcompat.widget.SearchView
             android:layout_margin="10dp"
             android:background="#EAEAEA"
@@ -38,22 +51,19 @@ android:layout_height="match_parent"
             />
 
         <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
                 android:text="My Work"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
             <ImageView
@@ -74,7 +84,6 @@ android:layout_height="match_parent"
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:background="#FEFEFE"
             android:orientation="vertical">
 
@@ -90,7 +99,7 @@ android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/home_issues" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -111,6 +120,11 @@ android:layout_height="match_parent"
 
 
             </RelativeLayout>
+            <View
+                android:layout_marginStart="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#EEEFF3" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -124,7 +138,7 @@ android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/home_pull_requests" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -146,12 +160,12 @@ android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:src="@drawable/baseline_keyboard_arrow_right_24" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#EEEFF3" />
-
             </RelativeLayout>
+            <View
+                android:layout_marginStart="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#EEEFF3" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -165,7 +179,7 @@ android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/home_discussions" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -187,12 +201,12 @@ android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:src="@drawable/baseline_keyboard_arrow_right_24" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#EEEFF3" />
-
             </RelativeLayout>
+            <View
+                android:layout_marginStart="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#EEEFF3" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -206,7 +220,7 @@ android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/home_repositories" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -228,13 +242,13 @@ android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:src="@drawable/baseline_keyboard_arrow_right_24" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#EEEFF3" />
-
             </RelativeLayout>
 
+            <View
+                android:layout_marginStart="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#EEEFF3" />
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
@@ -247,7 +261,7 @@ android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/home_organizations" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -269,12 +283,12 @@ android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:src="@drawable/baseline_keyboard_arrow_right_24" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#EEEFF3" />
-
             </RelativeLayout>
+            <View
+                android:layout_marginStart="60dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#EEEFF3" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -288,7 +302,7 @@ android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/home_starred" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -310,42 +324,34 @@ android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:src="@drawable/baseline_keyboard_arrow_right_24" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#EEEFF3" />
-
             </RelativeLayout>
 
         </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
                 android:text="Favorites"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_more_horiz_24"
-                android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"/>
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/baseline_more_horiz_24" />
 
         </RelativeLayout>
 
@@ -398,31 +404,28 @@ android:layout_height="match_parent"
         </androidx.cardview.widget.CardView>
 
         <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
                 android:text="Shortcuts"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_more_horiz_24"
-                android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"/>
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/baseline_more_horiz_24" />
 
         </RelativeLayout>
 
@@ -494,31 +497,28 @@ android:layout_height="match_parent"
         </LinearLayout>
 
     <RelativeLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
             android:text="Recent"
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_more_horiz_24"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"/>
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/baseline_more_horiz_24" />
 
     </RelativeLayout>
 
@@ -531,8 +531,7 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FEFEFE"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
 
         <LinearLayout
@@ -545,9 +544,9 @@ android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/home_recent"/>
 
             <LinearLayout
                 android:layout_marginHorizontal="10dp"
@@ -596,9 +595,9 @@ android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/home_recent"/>
 
             <LinearLayout
                 android:layout_marginHorizontal="10dp"
@@ -647,9 +646,9 @@ android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/home_recent"/>
 
             <LinearLayout
                 android:layout_marginHorizontal="10dp"
