--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,13 +11,22 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <ImageView
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <ImageView
         android:scaleType="centerCrop"
         android:layout_margin="15dp"
         android:src="@drawable/ic_launcher_foreground"
         android:layout_width="100dp"
         android:layout_height="100dp"/>
-
+            <ImageView
+                android:layout_marginLeft="40dp"
+                android:src="@drawable/pr_ic"
+                android:layout_width="50dp"
+                android:layout_height="40dp"/>
+        </LinearLayout>
     <TextView
 
         android:layout_gravity="center"
@@ -32,12 +41,15 @@
         android:id="@+id/recv_menu"/>
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="30dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:layout_marginRight="10dp"
+            android:src="@drawable/star_ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
